data/derived/sp14/progs/unify/prog0542.ml.out
Characters 8-10:
  let _ = tr[2];;
          ^^
Error: This expression has type int list
       This is not a function; it cannot be applied.
